# MyFirstRobot

Material/: Structure.vsdx
Material/CompareLaser/: .~lock.Safety Scanner Camparison.xlsx#  2020.05.04.BG-NHK-IDEAM 02.xlsx  2020.05.04.BG-NHK-IDEAM.xlsx  2020.05.19.BG-NHK-DH PHENIKAA 02.xlsx  Safety Scanner Camparison.xlsx
Material/ConnectLaser/: ReadScandata.py  ReadScandata_Py3.py
Material/Introduce/: Mobile Robot.pptx
Material/TutorialROS/: README.txt
example_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
example_ws/devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
example_ws/devel/include/sick_scan/: Encoder.h  RadarObject.h  RadarPreHeader.h  RadarPreHeaderDeviceBlock.h  RadarPreHeaderEncoderBlock.h  RadarPreHeaderMeasurementParam1Block.h  RadarPreHeaderStatusBlock.h  RadarScan.h  SickImu.h  SickScanConfig.h
example_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
example_ws/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
example_ws/devel/lib/hector_map_server/: hector_map_server
example_ws/devel/lib/hector_trajectory_server/: hector_trajectory_server
example_ws/devel/lib/pkgconfig/: SpawningObjectInSimulation.pc  amcl_load_map.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  location_lms100.pc  my_robot_name_2dnav.pc  navigation.pc  pub_sub.pc  publishing_odometry_information.pc  rf2o_laser_odometry.pc  robot_setup_tf.pc  rosbot_description.pc  rosbot_gazebo.pc  rosbot_navigation.pc  rplidar_ros.pc  sick_lms100.pc  sick_scan.pc  slam_gmapping.pc
example_ws/devel/lib/pub_sub/: listener  talker
example_ws/devel/lib/publishing_odometry_information/: pub_odometry_transform
example_ws/devel/lib/rf2o_laser_odometry/: rf2o_laser_odometry_node
example_ws/devel/lib/robot_setup_tf/: tf_listener
example_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
example_ws/devel/lib/sick_lms100/: pcl_converter
example_ws/devel/lib/sick_scan/: pcl_converter  radar_object_marker  sick_generic_caller  sick_scan_test
example_ws/devel/share/SpawningObjectInSimulation/cmake/: SpawningObjectInSimulationConfig.cmake
example_ws/devel/share/amcl_load_map/cmake/: amcl_load_mapConfig.cmake
example_ws/devel/share/hector_compressed_map_transport/cmake/: hector_compressed_map_transportConfig.cmake
example_ws/devel/share/hector_geotiff/cmake/: hector_geotiffConfig.cmake
example_ws/devel/share/hector_geotiff_plugins/cmake/: hector_geotiff_pluginsConfig.cmake
example_ws/devel/share/hector_imu_attitude_to_tf/cmake/: hector_imu_attitude_to_tfConfig.cmake
example_ws/devel/share/hector_imu_tools/cmake/: hector_imu_toolsConfig.cmake
example_ws/devel/share/hector_map_server/cmake/: hector_map_serverConfig.cmake
example_ws/devel/share/hector_map_tools/cmake/: hector_map_toolsConfig.cmake
example_ws/devel/share/hector_mapping/cmake/: hector_mapping-msg-extras.cmake  hector_mapping-msg-paths.cmake  hector_mappingConfig.cmake
example_ws/devel/share/hector_marker_drawing/cmake/: hector_marker_drawingConfig.cmake
example_ws/install/lib/pkgconfig/: pub_sub.pc
example_ws/install/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
example_ws/src/hector_slam/: README.txt
example_ws/src/hector_slam/amcl_load_map/: CMakeLists.txt  README.txt
example_ws/src/hector_slam/hector_mapping/: CMakeLists.txt
example_ws/src/hector_slam/rosbot_description/: README.txt
example_ws/src/hector_slam/slam_gmapping/: CMakeLists.txt  package.xml
example_ws/src/location_lms1xx/: README.txt
example_ws/src/location_lms1xx/location_lms100/: CMakeLists.txt  package.xml
example_ws/src/location_lms1xx/rf2o_laser_odometry/: CMakeLists.txt  README.md
example_ws/src/navigation_lms100/devel/: .catkin  .rosinstall
example_ws/src/navigation_tutorial/: README.txt
example_ws/src/navigation_tutorial/my_robot_name_2dnav/: CMakeLists.txt  costmap_common_params.yaml
example_ws/src/navigation_tutorial/publishing_odometry_information/: CMakeLists.txt  README.txt
example_ws/src/navigation_tutorial/publishing_odometry_information/src/: pub_odometry_transform.cpp
example_ws/src/navigation_tutorial/robot_setup_tf/: CMakeLists.txt  README.txt  package.xml
example_ws/src/pub_sub/: CMakeLists.txt  package.xml
example_ws/src/pub_sub/export/: location.csv  location_1.csv  location_2.csv
example_ws/src/pub_sub/scrips/: subLaserOdom.py  subLaserScan.py
example_ws/src/pub_sub/src/: talker.cpp~
example_ws/src/sick_scan/: CMakeLists.txt  README.txt  package.xml
example_ws/src/sick_scan/launch/: map_sick_lms_1xx.launch  mapping_sick_lms_1xx.launch  test_sick_lms_1xx.launch
example_ws/src/this_navigation/launch/: move_base.launch  my_robot_configuration.launch  scan_filter.launch  this_gmapping.launch  this_navigation.launch
raspi/importCppFunctionIntoPython/: importCppFunctionIntoPython.py  mylib.c  mylib.h  mylib.py
raspi/uart/: .uart_send.c.txt.swp  uart_receive  uart_receive.c  uart_receive.c.txt  uart_receive.py  uart_receive.py.txt  uart_send  uart_send.c  uart_send.c.txt  uart_send.py  uart_send.py.txt
rosserial_arduino/Blink/: Blink.ino
rosserial_arduino/HelloWorld/: HelloWorld.ino
rosserial_arduino/Logging/: Logging.ino
rosserial_arduino/PS3_controller/: PS3_controller.ino
rosserial_arduino/TestMPU6050/MPU6050/: MPU6050.ino
rosserial_arduino/arduino_pub/: arduino_pub.ino
rosserial_arduino/arduino_sub/: arduino_sub.ino
(+110 files in other folders)
